js/js.translator/testData/incremental/invalidation/exportsThroughInlineFunctionWithIntraModuleInliner/lib1/l2.0.kt
inline fun lib1Foo() = "empty"
